# nihu

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  README.md  cleverarg.cpp  cube_test.m  inherit.cpp  install.m  locationbrick_test.cpp  todo.txt  values.cpp
nihu/: CMakeLists.txt
nihu/aca/: aca.hpp
nihu/core/: blind_singular_quadrature.hpp  blind_transform_selector.hpp  domain.hpp  duffy_quadrature.hpp  element.hpp  element_match.hpp  field.hpp  field_type_acceleration_option.hpp  field_type_accelerator.hpp  gaussian_quadrature.hpp  global_definitions.hpp  integral_transform_forward.hpp  inverse_mapping.hpp  nearly_singular_integral.hpp  nearly_singular_planar_constant_collocation_shortcut.hpp  quadrature.hpp  result_matrix.hpp  shapeset.hpp  single_integral.hpp  singular_accelerator.hpp  singular_galerkin_quadrature.hpp  singular_integral_shortcut.hpp  space.hpp
nihu/fmm/: MyGMRES.hpp  black_box_fmm.hpp  bounding_box.hpp  chebyshev_cluster.hpp  cluster.hpp  cluster_tree.hpp  convolution_matrix.hpp  divide.hpp  elem_center_iterator.hpp  empty_cluster.hpp  fmm_assembly_times.hpp  fmm_indexed.hpp  fmm_integrated.hpp  fmm_matrix.hpp  fmm_timer.cpp  fmm_timer.h  hat_matrix.h  helmholtz_2d_wb_cluster.h  helmholtz_2d_wb_fmm.hpp  helmholtz_2d_wb_level_data.h  helmholtz_2d_wb_x2x_matrix.cpp  helmholtz_3d_hf_cluster.cpp  helmholtz_3d_hf_fmm.hpp  helmholtz_3d_hf_level_data.cpp  helmholtz_3d_hf_level_data.h  helmholtz_burton_miller_solver.hpp  helmholtz_field_point.hpp  kron_identity.hpp  laplace_2d_fmm.hpp  laplace_3d_fmm.hpp  lists.hpp  m2l_indices.hpp  nd_cheb.hpp  p2p.hpp  p2p_indexed.hpp  p2p_precompute.hpp  p2x_cluster_indexed.hpp  p2x_indexed.hpp  p2x_integral.hpp  spectral_interpolate.h  (+5 more)
nihu/gtest/: test_OFF.cpp  test_aca.cpp  test_bb.cpp  test_bessel.cpp  test_block_product.cpp  test_cluster.cpp  test_conditional_precompute.cpp  test_domain.cpp  test_elasto_bb_expansion.cpp  test_elem_center_iterator.cpp  test_element.cpp  test_helmholtz_2d_pulsating.cpp  test_helmholtz_2d_wb_expansion.cpp  test_helmholtz_3d_elem_integrals.cpp  test_helmholtz_kernel_derivatives.cpp  test_kron_identity.cpp  test_laplace_2d_elem_integrals.cpp  test_laplace_2d_expansion.cpp  test_laplace_2d_transparent.cpp  test_laplace_3d_elem_integrals.cpp  test_laplace_3d_expansion.cpp  test_shape.cpp  test_space.cpp  test_store.cpp
nihu/test/: CMakeLists.txt  field_accelerator_test.cpp  single_integral_test.cpp  singularity_types_test.cpp
nihu/tmp/: bool.hpp  integer.hpp  interval.hpp  operator.hpp  relation.hpp
nihu/tutorial/: 2d_hypersingular_test.cpp  bbfmm_covariance.cpp  bbfmm_laplace_3d.cpp  elastostatics.mex.cpp  elastostatics_2d_standalone.cpp  elements.cpp  fmm_helmholtz2d.cpp  helmholtz_3d_transparent_standalone.cpp  helmholtz_bem_2d.mex.cpp  helmholtz_bem_2d_cyl.mex.cpp  helmholtz_bem_2d_full.mex.cpp  helmholtz_bem_3d.mex.cpp  helmholtz_bem_3d_bm.mex.cpp  helmholtz_bem_3d_fict.mex.cpp  helmholtz_bem_3d_fict_test.m  helmholtz_bem_3d_field.mex.cpp  helmholtz_bem_3d_full.mex.cpp  helmholtz_bem_3d_matrices_gauss.mex.cpp  helmholtz_bem_3d_surf.mex.cpp  helmholtz_ibem_3d.mex.cpp  klline_surface.mex.cpp  klline_surface_test.m  kltria_surface.mex.cpp  laplace_2d_transparent_standalone.cpp  laplace_3d_transparent_standalone.cpp  laplace_bem_2d.mex.cpp  laplace_bem_2d_full.mex.cpp  laplace_bem_3d.mex.cpp  laplace_bem_3d_full.mex.cpp  laplace_bem_3d_hyper.mex.cpp  laplace_bem_3d_test.m  laplace_bem_standalone.cpp  laplace_double_integral.cpp  laplace_single_integral.cpp  mesh_building.mex.cpp  quadrature.cpp  rayleigh_integral_3d.mex.cpp  surface_mesh.off  tree_building.cpp
nihu/util/: block_product.hpp  casted_iterator.hpp  conditional_precompute.hpp  dual_range.hpp  eigen_utils.hpp  mex_matrix_interleaved.hpp  mex_matrix_separate.hpp  plain_type.hpp  real_part_type.hpp  store_pattern.hpp  type_info.hpp
src/: CMakeLists.txt  algorithm.hpp  bool.hpp  caller.cpp  include_license.m  integer.hpp  integrate.hpp  kernel.hpp  lambda.cpp  lambda.hpp  license.txt  main.cpp  main_seq.cpp  mulfun.hpp  operator.hpp  placeholder.hpp  read_license.m  sequence.cpp  sequence.hpp  statemachine.cpp
src/aca/: aca.hpp
src/bem/: Boonen13.m  Boonen13.mex.cpp  UnitBoonen13.mex.cpp  accelerator.hpp  approach.cpp  assembly.hpp  bem.hpp  complexity_estimator.hpp  couple.hpp  custom_gaussian_element.hpp  descriptor.hpp  descriptor_test.cpp  dirac_wrapper.hpp  domain.cpp  domain.hpp  double_integral.hpp  double_integral_new.hpp  dual_accelerator.hpp  duffy_quadrature.cpp  duffy_quadrature.hpp  eigtest.cpp  elem_accelerator.hpp  elem_descriptor.hpp  element.hpp  element_match.hpp  element_test.cpp  field.hpp  field_test.cpp  field_type_accelerator.hpp  field_vector_type_accelerator.hpp  formalism.hpp  function_space.hpp  gaussian_quadrature.hpp  hg.hpp  includes.h  integral.hpp  integral_operator.hpp  integral_test.cpp  integrate.hpp  interval.hpp  (+40 more)
src/core/: assembly.hpp  asymptotic_types.hpp  asymptotic_types.hpp.hpp  blind_singular_quadrature.hpp  blind_transform_selector.hpp  complexity_estimator.hpp  domain.hpp  double_integral.hpp  duffy_quadrature.hpp  element.hpp  element_match.hpp  field.hpp  field_dimension.hpp  field_type_acceleration_option.hpp  field_type_accelerator.hpp  formalism.hpp  function_space.hpp  gaussian_quadrature.hpp  global_definitions.hpp  integral_operator.hpp  integral_transform.hpp  interval.hpp  interval_estimator.hpp  inverse_mapping.hpp  jacobian_computer.hpp  kernel.hpp  match_types.hpp  mesh.hpp  nearly_singular_integral.hpp  nearly_singular_planar_constant_collocation_shortcut.hpp  projection.hpp  quadrature.hpp  result_matrix.hpp  shapeset.hpp  single_integral.hpp  singular_accelerator.hpp  singular_galerkin_quadrature.hpp  singular_integral_shortcut.hpp  singularity_types.hpp  space.hpp  (+1 more)
src/cqm/: cqm.hpp
src/demo/: hrtf_demo.m
src/fmm/: GMRES.h  black_box_fmm.hpp  bounding_box.hpp  chebyshev_cluster.hpp  cluster.hpp  cluster_tree.hpp  convolution_matrix.hpp  dft.cpp  dft.h  divide.h  divide.hpp  elem_center_iterator.hpp  empty_cluster.hpp  (+63 more)
(+1664 files in other folders)
